{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 72,
  "lineage": "603373a7-2201-ad4e-24c7-06c9c0b75146",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:security-group/sg-07fb00027c290938e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-07fb00027c290938e",
            "ingress": [],
            "name": "optar-dev-dev-eks-an1DWcsl-cluster-2024071413452455420000000e",
            "name_prefix": "optar-dev-dev-eks-an1DWcsl-cluster-",
            "owner_id": "705632797485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optar-dev-dev-eks-an1DWcsl-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-eks-an1DWcsl-cluster",
              "Project": "web-crawler-on-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:security-group/sg-0bb086634e802f1b9",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0bb086634e802f1b9",
            "ingress": [],
            "name": "optar-dev-dev-eks-an1DWcsl-node-2024071413452467000000000f",
            "name_prefix": "optar-dev-dev-eks-an1DWcsl-node-",
            "owner_id": "705632797485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optar-dev-dev-eks-an1DWcsl-node",
              "kubernetes.io/cluster/optar-dev-dev-eks-an1DWcsl": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-eks-an1DWcsl-node",
              "Project": "web-crawler-on-eks",
              "kubernetes.io/cluster/optar-dev-dev-eks-an1DWcsl": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1026300045",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07fb00027c290938e",
            "security_group_rule_id": "sgr-0dba1a2c6767596bc",
            "self": false,
            "source_security_group_id": "sg-0bb086634e802f1b9",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-730823712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-08eb1a89625e8f177",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-364012583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-0d6d5bfa4aea63bc2",
            "self": false,
            "source_security_group_id": "sg-07fb00027c290938e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1706106125",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-0dc538db4f0d9d71f",
            "self": false,
            "source_security_group_id": "sg-07fb00027c290938e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1393329509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-0dee7db8e13658ed8",
            "self": false,
            "source_security_group_id": "sg-07fb00027c290938e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1079032132",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-03177146c024b44b5",
            "self": false,
            "source_security_group_id": "sg-07fb00027c290938e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-619809423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-0d0f8618389014838",
            "self": false,
            "source_security_group_id": "sg-07fb00027c290938e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1738162382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-010654d107d8ee509",
            "self": false,
            "source_security_group_id": "sg-07fb00027c290938e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-949003328",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-082e20c330b089663",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2002201311",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-0801687579e61754e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-754415312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bb086634e802f1b9",
            "security_group_rule_id": "sgr-00c644c10f900846c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:network-acl/acl-098ef09f0d10e5b48",
            "default_network_acl_id": "acl-098ef09f0d10e5b48",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-098ef09f0d10e5b48",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "705632797485",
            "subnet_ids": [
              "subnet-0226926b54124fb73",
              "subnet-08b67293d53297fa3",
              "subnet-0a4f4c02a7b6eab86",
              "subnet-0ab0cefffc275449e",
              "subnet-0b12685d7e565486f",
              "subnet-0edc92d748024f55b"
            ],
            "tags": {
              "Name": "optar-dev-dev-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-default",
              "Project": "web-crawler-on-eks"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:route-table/rtb-0cb96d235d2a78703",
            "default_route_table_id": "rtb-0cb96d235d2a78703",
            "id": "rtb-0cb96d235d2a78703",
            "owner_id": "705632797485",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "optar-dev-dev-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-default",
              "Project": "web-crawler-on-eks"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:security-group/sg-090cea241298a6808",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-090cea241298a6808",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "705632797485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "optar-dev-dev-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-default",
              "Project": "web-crawler-on-eks"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022a66ea043888083",
            "arn": "arn:aws:ec2:eu-central-1:705632797485:elastic-ip/eipalloc-022a66ea043888083",
            "domain": "vpc",
            "id": "eipalloc-022a66ea043888083",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-153-162-134.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.162.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "optar-dev-dev-vpc-eu-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-eu-central-1a",
              "Project": "web-crawler-on-eks"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:internet-gateway/igw-0204175dafb18b121",
            "id": "igw-0204175dafb18b121",
            "owner_id": "705632797485",
            "tags": {
              "Name": "optar-dev-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc",
              "Project": "web-crawler-on-eks"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022a66ea043888083",
            "association_id": "eipassoc-0c293066305aff50e",
            "connectivity_type": "public",
            "id": "nat-026f1041b41219103",
            "network_interface_id": "eni-06090162e47f81a94",
            "private_ip": "10.0.4.92",
            "public_ip": "18.153.162.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b12685d7e565486f",
            "tags": {
              "Name": "optar-dev-dev-vpc-eu-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-eu-central-1a",
              "Project": "web-crawler-on-eks"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a035e42a3eeefd81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-026f1041b41219103",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a035e42a3eeefd8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0204175dafb18b121",
            "id": "r-rtb-0ac884922f6ec8fa11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac884922f6ec8fa1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:route-table/rtb-07a035e42a3eeefd8",
            "id": "rtb-07a035e42a3eeefd8",
            "owner_id": "705632797485",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "optar-dev-dev-vpc-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-private",
              "Project": "web-crawler-on-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:route-table/rtb-0ac884922f6ec8fa1",
            "id": "rtb-0ac884922f6ec8fa1",
            "owner_id": "705632797485",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "optar-dev-dev-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-public",
              "Project": "web-crawler-on-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d84cfb3b49f9e68a",
            "route_table_id": "rtb-07a035e42a3eeefd8",
            "subnet_id": "subnet-0a4f4c02a7b6eab86"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021d997b1ba63f0bd",
            "route_table_id": "rtb-07a035e42a3eeefd8",
            "subnet_id": "subnet-0226926b54124fb73"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0f118a5c2dd6413",
            "route_table_id": "rtb-07a035e42a3eeefd8",
            "subnet_id": "subnet-0ab0cefffc275449e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2e8c757336e3386",
            "route_table_id": "rtb-0ac884922f6ec8fa1",
            "subnet_id": "subnet-0b12685d7e565486f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce96ca46f8ff3d4f",
            "route_table_id": "rtb-0ac884922f6ec8fa1",
            "subnet_id": "subnet-0edc92d748024f55b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07495be2b2c09bad8",
            "route_table_id": "rtb-0ac884922f6ec8fa1",
            "subnet_id": "subnet-08b67293d53297fa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:subnet/subnet-0a4f4c02a7b6eab86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4f4c02a7b6eab86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705632797485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optar-dev-dev-vpc-private-eu-central-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-private-eu-central-1a",
              "Project": "web-crawler-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:subnet/subnet-0226926b54124fb73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0226926b54124fb73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705632797485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optar-dev-dev-vpc-private-eu-central-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-private-eu-central-1b",
              "Project": "web-crawler-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:subnet/subnet-0ab0cefffc275449e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab0cefffc275449e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705632797485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optar-dev-dev-vpc-private-eu-central-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-private-eu-central-1c",
              "Project": "web-crawler-on-eks",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:subnet/subnet-0b12685d7e565486f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b12685d7e565486f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705632797485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optar-dev-dev-vpc-public-eu-central-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-public-eu-central-1a",
              "Project": "web-crawler-on-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:subnet/subnet-0edc92d748024f55b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edc92d748024f55b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705632797485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optar-dev-dev-vpc-public-eu-central-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-public-eu-central-1b",
              "Project": "web-crawler-on-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:subnet/subnet-08b67293d53297fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b67293d53297fa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705632797485",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "optar-dev-dev-vpc-public-eu-central-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc-public-eu-central-1c",
              "Project": "web-crawler-on-eks",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-069ebc4e6d1b83c7f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:705632797485:vpc/vpc-069ebc4e6d1b83c7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-098ef09f0d10e5b48",
            "default_route_table_id": "rtb-0cb96d235d2a78703",
            "default_security_group_id": "sg-090cea241298a6808",
            "dhcp_options_id": "dopt-0eb173e5fd00038a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069ebc4e6d1b83c7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb96d235d2a78703",
            "owner_id": "705632797485",
            "tags": {
              "Name": "optar-dev-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "optar-dev-dev-vpc",
              "Project": "web-crawler-on-eks"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}